stopped at services section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#home">Home</a>
               </li>
-              <li class="nav-item d-flex">
+              <li class="nav-item">
                 <a class="nav-link" href="#about">About Us</a>
                 <a class="nav-link" href="#services">Services</a>
                 <a class="nav-link" href="#contact">Contact</a>
@@ -67,7 +67,7 @@
             <div class="col-md">
               <img src="images/about-us.jpg" alt="office space" class="w-100 py-5">
             </div>
-            <div class="col-md">
+            <div class="col-md py-4">
               <h2 class="display-3">About Us</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, id.
@@ -79,6 +79,18 @@
           </div><!--closes row-->
         </div><!--closes .container-lg-->
       </section><!--closes about-->
+
+      <!-- services section -->
+      <section id="services" class="container-lg">
+        <div class="row">
+          <h2 class="col-12">Our Services</h2>
+          <div class="col-md-6"></div><!--closes digital-->
+          <div class="col-md-6"></div><!--closes marketing-->
+          <div class="col-md-4"></div><!--closes video-->
+          <div class="col-md-4"></div><!--closes web-->
+          <div class="col-md-4"></div><!--closes print-->
+        </div> <!--closes .r0w-->
+      </section><!--closes #services-->
     </main>
 
     <!-- Bootsrap JS -->
